| Bug #39541 | CHECK TABLE on information_schema myisam tables produces error | ||
|---|---|---|---|
| Submitted: | 19 Sep 2008 16:39 | Modified: | 8 Dec 2008 17:05 |
| Reporter: | Cary Petterborg | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: I_S | Severity: | S3 (Non-critical) |
| Version: | 5.0.67, 5.0 bzr | OS: | Any |
| Assigned to: | Sergey Gluhov | Target Version: | 5.0.74 |
| Tags: | CHECK TABLE, myisam, Table upgrade required, regression | ||
| Triage: | Triaged: D3 (Medium) | ||
[19 Sep 2008 16:39]
Cary Petterborg
[19 Sep 2008 18:54]
Sveta Smirnova
Thank you for the report. Verified as described.
[29 Oct 2008 12:46]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/57305 2714 Sergey Glukhov 2008-10-29 Bug#39541 CHECK TABLE on information_schema myisam tables produces error issue 'The storage engine for the table doesn't support check' note for I_S tables
[13 Nov 2008 13:14]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/58636 2712 Sergey Glukhov 2008-11-13 Bug#39541 CHECK TABLE on information_schema myisam tables produces error issue 'The storage engine for the table doesn't support check' note for I_S tables
[13 Nov 2008 13:17]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/58638 2710 Sergey Glukhov 2008-11-13 [merge] 5.0-bugteam->5.1-bugteam automerge(bug#39541)
[13 Nov 2008 13:21]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/58639 2926 Sergey Glukhov 2008-11-13 [merge] 5.1-bugteam->6.0-bugteam automerge(bug#39541)
[2 Dec 2008 13:00]
Bugs System
Pushed into 5.0.74 (revid:sergey.glukhov@sun.com-20081113130648-5w0jwoiz08xoxdsq) (version source revid:sergey.glukhov@sun.com-20081113130648-5w0jwoiz08xoxdsq) (pib:5)
[3 Dec 2008 2:37]
Paul DuBois
Noted in 5.0.74 changelog. CHECK TABLE failed for MyISAM INFORMATION_SCHEMA tables. Resetting report to NDI pending push into 5.1.x, 6.0.x.
[8 Dec 2008 10:20]
Bugs System
Pushed into 5.1.31 (revid:sergey.glukhov@sun.com-20081113130922-47bd756xfkkq0p8h) (version source revid:azundris@mysql.com-20081114081134-pswy3m5go7r64m1p) (pib:5)
[8 Dec 2008 11:31]
Bugs System
Pushed into 6.0.9-alpha (revid:sergey.glukhov@sun.com-20081113131327-l4qrmn52nurgsggz) (version source revid:ingo.struewing@sun.com-20081121151447-dtf2ofz2ys0zqed1) (pib:5)
[8 Dec 2008 17:05]
Paul DuBois
Noted in 5.1.31, 6.0.9 changelogs.
[19 Jan 2009 11:27]
Bugs System
Pushed into 5.1.31-ndb-6.2.17 (revid:tomas.ulin@sun.com-20090119095303-uwwvxiibtr38djii) (version source revid:tomas.ulin@sun.com-20090108105244-8opp3i85jw0uj5ib) (merge vers: 5.1.31-ndb-6.2.17) (pib:6)
[19 Jan 2009 13:05]
Bugs System
Pushed into 5.1.31-ndb-6.3.21 (revid:tomas.ulin@sun.com-20090119104956-guxz190n2kh31fxl) (version source revid:tomas.ulin@sun.com-20090119104956-guxz190n2kh31fxl) (merge vers: 5.1.31-ndb-6.3.21) (pib:6)
[19 Jan 2009 16:10]
Bugs System
Pushed into 5.1.31-ndb-6.4.1 (revid:tomas.ulin@sun.com-20090119144033-4aylstx5czzz88i5) (version source revid:tomas.ulin@sun.com-20090119144033-4aylstx5czzz88i5) (merge vers: 5.1.31-ndb-6.4.1) (pib:6)
